tests/miniJava/neg/006710_mutation.MiniJava
class java { public static void this ( String [ ] java ) { { } } }
